# Serio

./: .gitmodules  CMakeLists.txt  README.md  java-modules.puml  settings.gradle  ui-view-map.puml
core/: CMakeLists.txt  README.md  build.gradle
core/include/: HelloWorld.h  config.h  core.h  crawler.h  error.h  http.h  id.h  localization.h  queue.h  task.h  ui.h
core/include/cache/: Cache.h  cache.h
core/include/caching-http-client/: CachingHttpClient.h  HttpRequest.h  HttpResponse.h
core/include/config/: CategoryCrawlerConfig.h  Config.h  ConfigSource.h  ConfigStructure.h  EpisodeCrawlerConfig.h  HttpClientConfig.h  PersistentProperties.h  SearchCrawlerConfig.h  SuggestionsCrawlerConfig.h  TvShowCrawlerConfig.h
core/include/crawler-http-client/: CrawlerHttpClient.h
core/include/crawler-runtime/: CrawlerExecution.h  CrawlerRuntime.h
core/include/http-client/: HttpClient.h  HttpRequest.h
core/include/localization/: Localization.h  TextId.h
core/include/tv-show-crawler-editor/: CrawlerBuilder.h  TvShowCrawlerBuilder.h  TvShowCrawlerEditor.h
core/include/tv-show-crawler-log-storage/: CrawlLogEntry.h  TvShowCrawlerLogStorage.h
core/include/tv-show-crawler-runtime/: CrawlerSerializer.h  TvShowCrawlerRuntime.h
core/include/tv-show-crawler-storage/: TvShowCrawlerStorage.h
core/include/tv-show-player/: Player.h  TvShowPlayer.h
core/include/tv-show-storage/: BigListProxy.h  Episode.h  LastWatchDate.h  ListPage.h  TvShow.h  TvShowStorage.h  WatchProgress.h
core/include/tv-show-viewer/: TvShowViewer.h
core/include/tv-shows/: BigListProxy.h  LastWatchDate.h  ListPage.h  TvShow.h  TvShowsFacade.h
core/src/: HelloWorld.cpp  config.cpp  core.cpp  crawler.cpp  error.cpp  http.cpp  id.cpp  task.cpp  ui.cpp
core/src/cache/: Cache.cpp  cache.cpp
core/src/caching-http-client/: CachingHttpClient.cpp  HttpRequest.cpp  HttpResponse.cpp
core/src/config/: CategoryCrawlerConfig.cpp  Config.cpp  ConfigSource.cpp  ConfigStructure.cpp  EpisodeCrawlerConfig.cpp  HttpClientConfig.cpp  PersistentProperties.cpp  SearchCrawlerConfig.cpp  SuggestionsCrawlerConfig.cpp  TvShowCrawlerConfig.cpp
core/src/crawler-http-client/: CrawlerHttpClient.cpp
core/src/crawler-runtime/: CrawlerArgumentSystem.cpp  CrawlerArgumentSystem.h  CrawlerExecution.cpp  CrawlerExecution.h  CrawlerExecutionSystem.cpp  CrawlerExecutionSystem.h  CrawlerRuntime.cpp  HttpRequestSystem.cpp  HttpRequestSystem.h  JsObject.cpp  JsObject.h  LoggingSystem.cpp  LoggingSystem.h  ProfilerSystem.cpp  ProfilerSystem.h  RegExpSystem.cpp  RegExpSystem.h  ResultFetchSystem.cpp  ResultFetchSystem.h
core/src/http-client/: HttpClient.cpp  HttpRequest.cpp  HttpResponse.cpp
core/src/localization/: English.h  Localization.cpp  Russian.h  english.h  localization.cpp  russian.h
core/src/tv-show-crawler-editor/: CrawlerBuilder.cpp  TvShowCrawlerBuilder.cpp  TvShowCrawlerEditor.cpp
core/src/tv-show-crawler-log-storage/: CrawlLogEntry.cpp
core/src/tv-show-crawler-runtime/: CrawlerSerializer.cpp  TvShowCrawlerRuntime.cpp
core/src/tv-show-player/: Player.cpp  TvShowPlayer.cpp
core/src/tv-show-storage/: Episode.cpp  LastWatchDate.cpp  TvShow.cpp  WatchProgress.cpp
core/src/tv-show-viewer/: TvShowViewer.cpp
core/src/tv-shows/: LastWatchDate.cpp  TvShow.cpp
core/test/: HelloWorldTest.cpp  config-test.cpp  crawler-test.cpp  error-test.cpp  functional-test.cpp  http-test.cpp  id-test.cpp  queue-test.cpp  task-test.cpp  ui-test.cpp
core/test/cache/: CacheTest.cpp  cache-test.cpp
core/test/caching-http-client/: CachingHttpClientTest.cpp
core/test/config/: ConfigTest.cpp
core/test/crawler-http-client/: CrawlerHttpClientTest.cpp
core/test/crawler-runtime/: CrawlerRuntimeTest.cpp
core/test/http-client/: HttpClientTest.cpp
core/test/lib/: http-mock.h  serio-test.h  test-data-en.h  test-data-ru.h  test-data.h  test-lib.cpp  test-lib.h
core/test/localization/: LocalizationTest.cpp
core/test/mocks/: CacheMock.h  CachingHttpClientMock.h  ConfigMock.h  CrawlerHttpClientMock.h  DatabaseStub.h  HttpClientMock.h  NFClientMock.h  TvShowCrawlerEditorMock.h  TvShowCrawlerLogStorageMock.h  TvShowCrawlerRuntimeMock.h  TvShowCrawlerStorageMock.h  TvShowPlayerMock.h  TvShowStorageMock.h  TvShowViewerMock.h
core/test/tv-show-crawler-editor/: TvShowCrawlerEditorTest.cpp
core/test/tv-show-crawler-log-storage/: CrawlLogEntryTest.cpp
core/test/tv-show-crawler-runtime/: TvShowCrawlerRuntimeTest.cpp
core/test/tv-show-player/: TvShowPlayerTest.cpp
core/test/tv-show-storage/: BigListProxyTest.cpp  EpisodeTest.cpp  LastWatchDateTest.cpp  ListPageTest.cpp  TvShowTest.cpp  WatchProgressTest.cpp
core/test/tv-show-viewer/: TvShowViewerTest.cpp
core/test/tv-shows/: BigListProxyTest.cpp  LastWatchDateTest.cpp  ListPageTest.cpp  TvShowTest.cpp
serio-qt/: CMakeLists.txt
serio-qt/resources/: qml.qrc  qtquickcontrols2.conf
serio-qt/resources/android/: build.cmake
serio-qt/resources/macos/: Info.plist  build.cmake  serio.icns
serio-qt/resources/other/: build.cmake
serio-qt/resources/qml/: StackOfViews.qml  main.qml
serio-qt/resources/windows/: build.cmake  installer.nsi
serio-qt/src/: Application.cpp  Application.h  main.cpp
serio-qt/src/concurrency/: TaskExecutor.h
serio-qt/src/database-storage/: BaseDatabaseStorage.cpp  BaseDatabaseStorage.h  DatabaseStorage.cpp  DatabaseStorage.h  DatabaseTvShowCrawlerLogStorage.cpp  DatabaseTvShowCrawlerLogStorage.h  DatabaseTvShowCrawlerStorage.cpp  DatabaseTvShowCrawlerStorage.h  DatabaseTvShowStorage.cpp  DatabaseTvShowStorage.h  Schema.cpp  Schema.h
serio-qt/src/http-client/: CachingNetworkAccessManagerFactory.cpp  CachingNetworkAccessManagerFactory.h  FetchRequest.cpp  QHttpClient.cpp  QHttpClient.h
serio-qt/src/model/: TvShowListModel.cpp  TvShowListModel.h
serio-qt/src/network/: FetchRequest.cpp  FetchRequest.h  QHttpClient.h
serio-qt/src/storage/: DatabaseStorage.cpp  DatabaseStorage.h  DatabaseTvShowCrawlerStorage.cpp  DatabaseTvShowStorage.cpp  DatabaseTvShowStorage.h  StorageError.cpp  StorageError.h  TvShowStorage.cpp  TvShowStorage.h
ui/src/: App.js  (+10 more)
(+620 files in other folders)
